fix room code alignment

--- a/src/styles/room.scss
+++ b/src/styles/room.scss
@@ -16,8 +16,7 @@
 
       > div {
         display: flex;
-        gap: 29px;
-
+        gap: 31.5px;
         button {
           height: 40px;
         }
